Force vertical scrollbar to avoid content jumping

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -80,6 +80,7 @@
 
 html {
   position: relative;
+  overflow-y: scroll;
   min-height: 100%;
 }
 
